--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,7 +11,11 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
+{% for post in site.publications reversed %}
+  {% include archive-single.html %}
+{% endfor %}
+
+<!-- <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
@@ -30,7 +34,7 @@ author_profile: true
   {% for post in site.publications reversed %}
     {% include archive-single.html %}
   {% endfor %}
-{% endif %}
+{% endif %} -->
 
 
 
