--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,30 +11,24 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.publications reversed %}
-  {% include archive-single-pub.html %}
+{% assign start_year = 2023 %}
+{% assign end_year = 2080 %}
+
+<!-- Generate the list of years in reverse order -->
+{% assign years = (start_year..end_year) | reverse %}
+
+<!-- Loop through each year -->
+{% for year in years %}
+  {% assign title_shown = false %}
+  
+  <!-- Loop through the publications in reverse order by date -->
+  {% for post in site.publications reversed %}
+    {% if post.year == year %}
+      {% unless title_shown %}
+        <h2>{{ year }}</h2><hr />
+        {% assign title_shown = true %}
+      {% endunless %}
+      {% include archive-single.html %}
+    {% endif %}
+  {% endfor %}
 {% endfor %}
-
-<!-- <!-- New style rendering if publication categories are defined -->
-<!-- {% if site.publication_category %} -->
-<!--   {% for category in site.publication_category  %} -->
-<!--     {% assign title_shown = false %} -->
-<!--     {% for post in site.publications reversed %} -->
-<!--       {% if post.category != category[0] %} -->
-<!--         {% continue %} -->
-<!--       {% endif %} -->
-<!--       {% unless title_shown %} -->
-<!--         <h2>{{ category[1].title }}</h2><hr /> -->
-<!--         {% assign title_shown = true %} -->
-<!--       {% endunless %} -->
-<!--       {% include archive-single.html %} -->
-<!--     {% endfor %} -->
-<!--   {% endfor %} -->
-<!-- {% else %} -->
-<!--   {% for post in site.publications reversed %} -->
-<!--     {% include archive-single.html %} -->
-<!--   {% endfor %} -->
-<!-- {% endif %} --> -->
-
-
-
