--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -28,7 +28,7 @@ author_profile: true
         <h2>{{ year }}</h2><hr />
         {% assign title_shown = true %}
       {% endunless %}
-      {% include archive-single.html %}
+      {% include archive-single-pub.html %}
     {% endif %}
   {% endfor %}
 {% endfor %}
