--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,12 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">
+    You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.
+  </div>
+  <div style="margin-top: 10px;">
+    <sup>*</sup> indicates equal contribution.
+  </div>
 {% endif %}
 
 {% include base_path %}
